[package]
authors = ["John Weeks <jweeks@ambulnz.com>"]
edition = "2018"
readme = "README.md"
name = "rtfm-02"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"

cortex-m-rtfm = "0.5.1"
# stm32f30x = "0.8.0"

panic-itm = "0.4.1"
# panic-semihosting = "0.5.3"
# panic-halt = "0.2.0"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
[dependencies.stm32f3]
features = ["stm32f303", "rt"]
version = "0.10.0"

# this lets you use `cargo fix`!
[[bin]]
name = "rtfm-02"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
